# gauss_jordan_solver

./: .gitignore  CMakeLists.txt  README.md
include/: gauss.h  matrix.h  pbma.h  solver.h
src/: gauss.cpp  main.cpp  matrix.cpp  pbma.cpp  solver.cpp
tests/: test_gauss.cpp
